# selenium-proxy-utils

./: LICENSE  README.MD  lint.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
plugin/: __init__.py  webdriver.py
selenium_proxy/: __init__.py  schemas.py
selenium_proxy/exceptions/: __init__.py
tests/: conftest.py  test_chrome.py  test_edge.py
